--- a/.github/workflows/cicd1.yml
+++ b/.github/workflows/cicd1.yml
@@ -34,7 +34,7 @@ jobs:
         sudo apt-get update -y
         sudo apt-get install trivy -y
     - name: Trivy Fs scan
-      run: trivy fs --format table -o fs -report.json .
+      run: trivy fs --format json -o report.json .
 
     - name: Gitleaks Installation
       run: sudo apt install gitleaks -y
